added color music image

--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,7 @@ select {
     margin-bottom: 20px;
     font-size: 4em;
     color: #373440;
+    font-weight: bold;
     font-family: Verdana,Helvetica,Arial,sans-serif;
 }   
 
